[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/Repairshop/Repairshop_HUD.gd" type="Script" id=2]
[ext_resource path="res://Textures/Loot_Objects/mine.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UI/Repairshop/Repairshop_Tabs.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/Repairshop/Spaceship_Mock.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[node name="Repairshop_HUD" type="Node2D"]
z_index = 2
script = ExtResource( 2 )

[node name="Repairshop_Tabs" parent="." instance=ExtResource( 4 )]

[node name="Mine_Info" type="Node2D" parent="."]

[node name="mine_sprite" type="Sprite" parent="Mine_Info"]
position = Vector2( 300, 60 )
texture = ExtResource( 3 )

[node name="Mine_lbl" type="Label" parent="Mine_Info"]
margin_left = 320.0
margin_top = 40.0
margin_right = 400.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "x 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spaceship_Mock" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 35 )
z_index = 3

[node name="Close_btn" type="Button" parent="."]
margin_left = 256.0
margin_top = 512.0
margin_right = 384.0
margin_bottom = 576.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Close_btn" to="." method="_on_Close_btn_pressed"]
